css/style.css
/* ... */
.layout_padding {
  padding: 75px 0;
}

.layout_padding2 {
  padding: 45px 0;
}

.layout_padding2-top {
  padding-top: 45px;
}

.layout_padding2-bottom {
  padding-bottom: 45px;
}

.layout_padding-top {
  padding-top: 75px;
}

.layout_padding-bottom {
  padding-bottom: 75px;
}

.custom_heading-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.custom_heading-container h2 {
  color: #000000;
  font-weight: 700;
  position: relative;
}

.custom_heading-container h2::before {
  content: "";
  width: 60px;
  height: 3px;
  position: absolute;
  left: 0;
  bottom: -2px;
  background-color: #6bd1bd;
}

.custom_heading-container h2::after {
  content: "";
  width: 10px;
  height: 10px;
  position: absolute;
  top: 50%;
  right: -15px;
  -webkit-transform: translateY(-50%);
          transform: translateY(-50%);
  border-radius: 100%;
}

/*header section*/
.hero_area {
  height: 100vh;
  background-image: url(../images/hero-bg.png);
}

.sub_page .hero_area {
  height: auto;
}

.hero_area.sub_pages {
  height: auto;
}

.header_section .active a {
  color: #0304048c !important;
}

.header_section .call_btn {
  margin-left: auto;
}

.header_section .call_btn a {
  color: #ffffff;
}

.header_section .container-fluid {
  padding-right: 25px;
  padding-left: 25px;
}

.header_section .nav_container {
  margin: 0 auto;
}

.custom_nav-container.navbar-expand-lg .navbar-nav .nav-link {
  padding: 10px 30px;
  color: #070101;
  font-weight: bold;
  text-align: center;
}

.custom_nav-container .user_option {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.custom_nav-container .user_option .login_btn-container a {
  display: inline-block;
  padding: 10px 30px;
  color: #070101;
  text-align: center;
}

a,
a:hover,
a:focus {
  text-decoration: none;
}

a:hover,
a:focus {
  color: initial;
}

.btn,
.btn:focus {
  outline: none !important;
  -webkit-box-shadow: none;
          box-shadow: none;
}

.nav_search-btn {
  background-image: url(../images/search-icon-black.png);
  background-size: 22px;
  background-repeat: no-repeat;
  width: 35px;
  height: 35px;
  padding: 0;
  border: none;
}

.navbar-brand img {
  width: 60px;
}

.navbar-brand,
.navbar-brand:hover {
  color: #000000;
  font-size: 30px;
  font-weight: 600;
  text-transform: uppercase;
}

@media (max-width: 768px) {
  .navbar-brand,
  .navbar-brand:hover {
    font-size: 18px;
  }
}

.custom_nav-container {
  z-index: 99999;
  padding: 15px 0;
}

.custom_nav-container .navbar-toggler {
  outline: none;
}

.custom_nav-container .navbar-toggler .navbar-toggler-icon {
  background-image: url(../images/menu.png);
  background-size: 55px;
}

/*end header section*/
.slider_section {
  margin-top: -75px;
}

.slider_section .row {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.slider_section .detail-box h1 {
  font-size: 4rem;
  font-weight: bold;
}

.slider_section .detail-box p {
  margin: 15px 0;
}

.slider_section .detail-box a {
  display: inline-block;
  padding: 10px 45px;
  background-color: #fb1004;
  color: #ffffff;
  border-radius: 0;
  margin-top: 15px;
}

.slider_section .detail-box a:hover {
  background-color: #b00b03;
  color: #ffffff;
}

.slider_section .img-box img {
  width: 100%;
}

.slider_section .carousel-control-prev,
.slider_section .carousel-control-next {
  position: absolute;
  left: 2.5%;
  width: 45px;
  height: 45px;
  border: none;
  top: 47%;
}

.slider_section .carousel-control-prev {
  -webkit-transform: translate(-50%, 55px);
          transform: translate(-50%, 55px);
}

.carousel-control-prev,
.carousel-control-next {
  background-color: #0304048c;
  background-repeat: no-repeat;
  background-size: 10px;
  background-position: center;
  opacity: 1;
  border-radius: 7px;
}

.carousel-control-prev:hover,
.carousel-control-next:hover {
  background-color: #fb1004;
}

.carousel-control-prev {
  background-image: url(../images/left-arrow-black.png);
}

.carousel-control-prev:hover {
  background-image: url(../images/left-arrow-white.png);
}

.carousel-control-next {
  background-image: url(../images/right-arrow-black.png);
}

.carousel-control-next:hover {
  background-image: url(../images/right-arrow-white.png);
}

.menu_fixed-position {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 99999999999999999999999999;
}

.custom_menu-container {
  background-color: #030404c0;
}

.custom_menu-container .custom_menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.custom_menu-container .custom_menu .navbar-nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
}

.custom_menu-container .custom_menu .navbar-nav .nav-link {
  padding: 15px 30px;
  color: #ffffff;
  text-align: center;
  font-weight: bold;
}

.custom_menu-container .custom_menu .user_option {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
}

.custom_menu-container .custom_menu .user_option .login_btn-container a {
  display: inline-block;
  padding: 15px 30px;
  color: #ffffff;
  text-align: center;
}

.custom_menu-container .nav_search-btn {
  background-image: url(../images/search-icon.png);
}

.about_section .row {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.about_section .img-box img {
  width: 100%;
}

.about_section .detail-box p {
  margin-top: 25px;
}
/* ... */

